=========
Changelog
=========

This file keeps track of all notable changes to the Slurm Charms.

Unreleased
----------
- updated slurm-ops-manager to version 0.8.17


1.1.3 - 2023-12-11
------------------

- added a custom python installation to run the charm code
- removed CentOS 8 support

1.1.2 - 2023-09-07
------------------

- added support for Rocky Linux
- removed the nhc resource and packed the nhc tar file along with slurmd charm

1.1.1 - 2023-06-27
------------------

- added support for Ubuntu 22.04

1.1.0 - 2023-05-22
------------------

- set setuptools to be lower than 55
- set Slurm 23.02.1 as default on slurm-ops-manager 0.8.13
- set urllib3 as a requirement for slurmd and slurmctld and fix the version to 1.26.9
- changed license to Apache-2.0
- removed the action in slurmd to install InfiniBand drivers
- removed the action in slurmd to install Nvidia drivers
- removed the action in slurmd to install Singularity
- removed the action in slurmd to install MPI (mpich)

1.0.0 - 2022-10-17
------------------

0.10.1 - 2022-10-04
-------------------

- added action in slurmd to install MPI (mpich)

0.10.0 - 2022-09-15
-------------------

- updated NHC to version 1.4.3
- changed how NHC is installed to be via Juju resources
- added action in slurmd to install singularity

0.9.2 - 2022-07-04
------------------

- added slurmctld configuration options to use TLS certificates for etcd

0.9.1 - 2022-06-02
------------------

- added munge key to etcd database
- added action in slurmctld to create etcd user to query mungekey
- added action in slurmctld to get etcd root password
- added action in slurmd to get etcd slurmd password
- added set-node-inventory slurmd action
- updated default Mellanox Infiniband drivers to version 5.4
- fix get-node-inventory action
- fix influxdb-info slurmctld action
- fix etcd not being configured after an upgrade

0.9.0 - 2022-04-12
------------------

- fix: do not install Nvidia repository by default