@@ -6,7 +6,8 @@ This file keeps track of all notable changes to the Slurm Charms.
 
 Unreleased
 ----------
-- updated slurm-ops-manager to version 0.8.17
+- added actions to set node weight and gres
+- updated slurm-ops-manager to version 0.8.18
 
 
 1.1.3 - 2023-12-11
